# robotnik_test_robot

./: README.md
robotnik_test_robot/: CMakeLists.txt  package.xml
robotnik_test_robot_bringup/: CMakeLists.txt  package.xml
robotnik_test_robot_bringup/config/: teb_local_planner_params.yaml
robotnik_test_robot_bringup/launch/: test.launch
robotnik_test_robot_distance/: CMakeLists.txt  package.xml
robotnik_test_robot_distance/src/: distance.cpp
robotnik_test_robot_test_battery/: CMakeLists.txt  package.xml
robotnik_test_robot_test_battery/src/: test_battery.cpp
robotnik_test_robot_test_square/: CMakeLists.txt  package.xml
robotnik_test_robot_test_square/src/: test_square.cpp
