<?xml version="1.0"?>
<package>
  <name>robotnik_test_robot</name>
  <version>0.0.0</version>
  <description>The robotnik_test_robot package</description>

 
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>

  <license>BSD</license>
  <author email="cvillar@robotnik.es">Carlos Villar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotnik_test_robot_distance</run_depend>
  <run_depend>robotnik_test_robot_test_square</run_depend>
  <run_depend>robotnik_test_robot_test_battery</run_depend>
  <run_depend>robotnik_test_robot_bringup</run_depend>

  <export><metapackage/></export>
</package>
