<?xml version="1.0"?>
<package>
  <name>robotnik_test_robot_distance</name>
  <version>0.0.0</version>
  <description>The robotnik_test_robot_distance package</description>

  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>

  <license>BSD</license>
  <author email="cvillar@robotnik.es">Carlos Villar</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>


  <export>

  </export>
</package>
